--- a/master/Game1.html
+++ b/master/Game1.html
@@ -5,307 +5,433 @@
 	<link href="../_shared/demo.css" rel="stylesheet" type="text/css">
 	<script src="http://code.createjs.com/easeljs-0.8.1.min.js"></script>
 	<script>
-		var stage, output;
-		var flag = 0;
+		var stage, output, g;
+		var square1, square2, square3, square4, square5, boundary;
+		var lbl_front, lbl_rear, lbl_status_title, lbl_status, lbl_life, lbl_life_title, lbl_operation_title, lbl_operation;
+		var lbl_elements, lbl_e1, lbl_e2, lbl_e3, lbl_e4, lbl_e5;
+		var life = 3;
+		var front = -1, rear = -1, size = 4, pi = 0;
+		var data = ["5", "2", "8", "1", "10"];
+		var pop_op = ["Q", "S", "3", "Q", "S"];
 
 		function init() {
 			stage = new createjs.Stage("demoCanvas");
 
-			// this lets our drag continue to track the mouse even when it leaves the canvas:
-			// play with commenting this out to see the difference.
-			stage.mouseMoveOutside = false;
-
-			// to draw an array...
-
-			var g = new createjs.Graphics();
+			g = new createjs.Graphics();
 			g.beginStroke(createjs.Graphics.getRGB(0,0,0));
 
-			g.drawRect(100,100,70,70);
-/*			g.drawRect(175,100,70,70);
-			g.drawRect(250,100,70,70);
-			g.drawRect(325,100,70,70);
-			g.drawRect(400,100,70,70);
-*/
+			design_UI();
 
-			var square1 = new createjs.Shape();
-			square1.graphics.beginFill("#999999").drawRect(100, 100, 70, 70);
+		}
+
+		// to set up the UI...
+		function design_UI() {
+
+			square1 = new createjs.Shape();
+			square1.graphics.beginFill("#999999").drawRect(0, 0, 70, 70);
 			square1.name = "square1";
-			stage.addChild(square1);
+			square1.x = 100;
+			square1.y = 100;
 
-			square1.on("click", handleClickEvent);
-
-
-			var square2 = new createjs.Shape();
-			square2.graphics.beginFill("#999999").drawRect(175, 100, 70, 70);
+			square2 = new createjs.Shape();
+			square2.graphics.beginFill("#999999").drawRect(0, 0, 70, 70);
 			square2.name = "square2";
-			stage.addChild(square2);
+			square2.x = 175;
+			square2.y = 100;
 
-			square2.on("click", handleClickEvent);
+			square3 = new createjs.Shape();
+			square3.graphics.beginFill("#999999").drawRect(0, 0, 70, 70);
+			square3.name = "square3";
+			square3.x = 250;
+			square3.y = 100;
 
-
-			var square3 = new createjs.Shape();
-			square3.graphics.beginFill("#999999").drawRect(250, 100, 70, 70);
-			square3.name = "square1";
-			stage.addChild(square3);
-
-			square3.on("click", handleClickEvent);
-
-
-			var square4 = new createjs.Shape();
-			square4.graphics.beginFill("#999999").drawRect(325, 100, 70, 70);
+			square4 = new createjs.Shape();
+			square4.graphics.beginFill("#999999").drawRect(0, 0, 70, 70);
 			square4.name = "square4";
-			stage.addChild(square4);
+			square4.x = 325;
+			square4.y = 100;
 
-			square4.on("click", handleClickEvent);
-
-
-			var square5 = new createjs.Shape();
-			square5.graphics.beginFill("#999999").drawRect(400, 100, 70, 70);
+			square5 = new createjs.Shape();
+			square5.graphics.beginFill("#999999").drawRect(0, 0, 70, 70);
 			square5.name = "square5";
-			stage.addChild(square5);
+			square5.x = 400;
+			square5.y = 100;
 
-			square5.on("click", handleClickEvent);
+			boundary = new createjs.Shape(g);
+			boundary.graphics.beginStroke("#000").setStrokeStyle(1).drawRect(0, 0, 500, 300);
 
-			var rect1 = new createjs.Shape(g);
-
-			rect1.graphics.beginStroke("#000")
-     		.setStrokeStyle(1)
-     		.drawRect(0, 0, 500, 300);
-
-			g.drawRect(175,100,70,70);
-
-			var rect2 = new createjs.Shape(g);
-			rect2.graphics.beginStroke("#000")
-     		.setStrokeStyle(1)
-     		.drawRect(0, 0, 500, 300);
-
-			g.drawRect(250,100,70,70);
-
-			var rect3 = new createjs.Shape(g);
-			rect3.graphics.beginStroke("#000")
-     		.setStrokeStyle(1)
-     		.drawRect(0, 0, 500, 300);
-
-			g.drawRect(325,100,70,70);
-
-			var rect4 = new createjs.Shape(g);
-			rect4.graphics.beginStroke("#000")
-     		.setStrokeStyle(1)
-     		.drawRect(0, 0, 500, 300);
-
-			g.drawRect(400,100,70,70);
-
-			var rect5 = new createjs.Shape(g);
-			rect5.graphics.beginStroke("#999")
-     		.setStrokeStyle(1)
-     		.drawRect(0, 0, 500, 300);
-
-			stage.addChild(rect1, rect2, rect3, rect4, rect5);
-
-			stage.addChild(square1, square2, square3, square4, square5);
+			stage.addChild(square1, square2, square3, square4, square5, boundary);
 			stage.update();
 
+			lbl_front = new createjs.Text("Front", "bold 14px calibri", "Blue");
+			lbl_front.textAlign = "center";
+			lbl_front.y = 80;
+			lbl_front.x = -40;
 
-			// to draw a circle for the top
+			lbl_rear = new createjs.Text("Rear", "bold 14px calibri", "Blue");
+			lbl_rear.textAlign = "center";
+			lbl_rear.y = 100;
+			lbl_rear.x = -40;
 
-			var top = new createjs.Shape();
-			top.graphics.beginFill("#000000").drawCircle(-50, -50, 20);
+			lbl_status_title = new createjs.Text("Status", "bold 14px Arial", "#000000");
+			lbl_status_title.textAlign = "center";
+			lbl_status_title.y = 150;
+			lbl_status_title.x = 280;
 
-			var lbl_top = new createjs.Text("Top", "bold 14px Arial", "#FFFFFF");
-			lbl_top.textAlign = "center";
-			lbl_top.y = -57;
-			lbl_top.x = -50;
+			lbl_status = new createjs.Text("Status", "bold 14px calibri", "Blue");
+			lbl_status.textAlign = "center";
+			lbl_status.text = "Game Start";
+			lbl_status.y = 170;
+			lbl_status.x = 280;
 
+			lbl_operation_title = new createjs.Text("Operation : ", "bold 14px Arial", "#000000");
+			lbl_operation_title.textAlign = "left";
+			lbl_operation_title.y = 150;
+			lbl_operation_title.x = -50;
 
+			lbl_operation = new createjs.Text("Push", "bold 14px Arial", "red");
+			lbl_operation.textAlign = "left";
+			lbl_operation.text = "Push " + data[0];
+			lbl_operation.y = 150;
+			lbl_operation.x = 30;
 
-			// to draw a circle for an elements
+			lbl_life_title = new createjs.Text("Life           : ", "bold 14px Arial", "#000000");
+			lbl_life_title.textAlign = "left";
+			lbl_life_title.y = 170;
+			lbl_life_title.x = -50;
 
-			var element1 = new createjs.Shape();
-			element1.graphics.beginFill("red").drawCircle(30, -50, 20);
+			lbl_life = new createjs.Text("", "bold 14px Arial", "red");
+			lbl_life.textAlign = "left";
+			lbl_life.text = "" + life;
+			lbl_life.y = 170;
+			lbl_life.x = 30;
 
-			var lbl_e1 = new createjs.Text("5", "bold 14px Arial", "#000000");
+			lbl_elements = new createjs.Text("Elements : ", "bold 14px Arial", "#000000");
+			lbl_elements.textAlign = "left";
+			lbl_elements.y = -57;
+			lbl_elements.x = -70;
+
+			lbl_e1 = new createjs.Text("5", "bold 14px Arial", "#000000");
 			lbl_e1.textAlign = "center";
+			lbl_e1.text = data[0];
 			lbl_e1.y = -57;
 			lbl_e1.x = 30;
 
-			element1.setBounds(100, 100, 100, 100);
-			element1.cursor = "default";
-
-
-			var element2 = new createjs.Shape();
-			element2.graphics.beginFill("red").drawCircle(80, -50, 20);
-
-			var lbl_e2 = new createjs.Text("10", "bold 14px Arial", "#000000");
+			lbl_e2 = new createjs.Text("", "bold 14px Arial", "#000000");
 			lbl_e2.textAlign = "center";
+			lbl_e2.text = data[1];
 			lbl_e2.y = -57;
-			lbl_e2.x = 80;
+			lbl_e2.x = 50;
 
-
-			var element3 = new createjs.Shape();
-			element3.graphics.beginFill("red").drawCircle(130, -50, 20);
-
-			var lbl_e3 = new createjs.Text("2", "bold 14px Arial", "#000000");
+			lbl_e3 = new createjs.Text("", "bold 14px Arial", "#000000");
 			lbl_e3.textAlign = "center";
+			lbl_e3.text = data[2];
 			lbl_e3.y = -57;
-			lbl_e3.x = 130;
+			lbl_e3.x = 70;
 
-
-			var element4 = new createjs.Shape();
-			element4.graphics.beginFill("red").drawCircle(180, -50, 20);
-
-			var lbl_e4 = new createjs.Text("13", "bold 14px Arial", "#000000");
+			lbl_e4 = new createjs.Text("", "bold 14px Arial", "#000000");
 			lbl_e4.textAlign = "center";
+			lbl_e4.text = data[3];
 			lbl_e4.y = -57;
-			lbl_e4.x = 180;
+			lbl_e4.x = 90;
 
-
-			var element5 = new createjs.Shape();
-			element5.graphics.beginFill("red").drawCircle(230, -50, 20);
-
-			var lbl_e5 = new createjs.Text("8", "bold 14px Arial", "#000000");
+			lbl_e5 = new createjs.Text("", "bold 14px Arial", "#000000");
 			lbl_e5.textAlign = "center";
+			lbl_e5.text = data[4];
 			lbl_e5.y = -57;
-			lbl_e5.x = 230;
-
-
+			lbl_e5.x = 110;
 
 			stage.update();
 
-			// code to drag the object
 
 			var dragger = new createjs.Container();
 			dragger.x = dragger.y = 100;
-			dragger.addChild(top, lbl_top);
+			dragger.addChild(lbl_operation_title, lbl_operation, lbl_front, lbl_rear, lbl_elements, lbl_e1, lbl_e2, lbl_e3, lbl_e4, lbl_e5, lbl_life_title, lbl_life, lbl_status_title, lbl_status);
 			stage.addChild(dragger);
 
-			/*
-			dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
+			stage.update();
+
+			perform_push();
+		}
+
+		// to perform the push operations...
+		function perform_push() {
+
+			square1.on("click", function(evt){
+				// push operation
+				if(rear < size && front != 0) {
+					if(rear == -1 && life > 0) {
+						lbl_e1.x = square1.x - 70;
+						lbl_e1.y = square1.y - 70;
+						lbl_front.x += 75;
+						front++;
+						lbl_rear.x += 75;
+						rear++;
+						lbl_operation.text = "Push " + data[1];
+						lbl_e2.text = data[1];
+						lbl_status.text = "Pushed " + data[0];
+					}
+					else if(rear != -1 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+				// pop operation
+				else {
+					if(front == 0 && life > 0) {
+						lbl_e1.x = 30;
+						lbl_e1.y = -57;
+						lbl_front.x += 75;
+						pi++;
+						front++;
+						if(pop_op[pi] == "S") {
+							lbl_operation.text = "Pop by assuming STACK";
+						}
+						else if(pop_op[pi] == "Q") {
+							lbl_operation.text = "Pop by assuming QUEUE";
+						}
+						lbl_status.text = "Poped " + lbl_e1.text;
+					}
+					else if(front != 0 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+
 				stage.update();
 			});
-			*/
 
-			stage.update();
-
-
-			var dragger = new createjs.Container();
-			dragger.x = dragger.y = 100;
-			dragger.addChild(element1, lbl_e1);
-			stage.addChild(dragger);
-
-			/*dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
-				stage.update();
-			});*/
-
-			stage.update();
-
-			square1.on("click", handleClickEvent);
 			square2.on("click", function(evt){
-				console.log("current(" + square1.x + " , " + square1.y + ")");
-				element2.x = element2.y = 0;
-				element2.x = square1.x + 50;
-				element2.y = square1.y + 50;
-				lbl_e2.x = square1.x + 50;
-				lbl_e2.y = square1.y + 50;
-				console.log("Circle(" + element2.x + " , " + element2.y + ")");
-				console.log("label(" + lbl_e2.x + " , " + lbl_e2.y + ")");
-				stage.update();
+				// Push Operation
+				if(rear < size && front != 1) {
+					if(rear == 0 && life > 0) {
+						lbl_e2.x = square2.x - 70;
+						lbl_e2.y = square2.y - 70;
+						lbl_rear.x += 75;
+						rear++;
+						lbl_operation.text = "Push " + data[2];
+						lbl_e3.text = data[2];
+						lbl_status.text = "Pushed " + data[1];
+					}
+					else if(rear != 0 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+				// pop operation
+				else {
+					if(front == 1 && life > 0) {
+						lbl_e2.x = 50;
+						lbl_e2.y = -57;
+						lbl_front.x += 75;
+						pi++;
+						front++;
+						if(pop_op[pi] == "S") {
+							lbl_operation.text = "Pop by assuming STACK";
+						}
+						else if(pop_op[pi] == "Q") {
+							lbl_operation.text = "Pop by assuming QUEUE";
+						}
+						lbl_status.text = "Poped " + lbl_e2.text;
+					}
+					else if(front != 1 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
 
+				stage.update();
 			});
-			square3.on("click", handleClickEvent);
-			square4.on("click", handleClickEvent);
-			square5.on("click", handleClickEvent);
 
-			stage.update();
+			square3.on("click", function(evt){
+				// Push Operation
+				if(rear < size && front != 2) {
+					if(rear == 1 && life > 0) {
+						lbl_e3.x = square3.x - 70;
+						lbl_e3.y = square3.y - 70;
+						lbl_rear.x += 75;
+						rear++;
+						lbl_operation.text = "Push " + data[3];
+						lbl_e4.text = data[3];
+						lbl_status.text = "Pushed " + data[2];
+					}
+					else if(rear != 1 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Good Going.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+				// pop operation
+				else {
+					if(front == 2 && life > 0) {
+						lbl_e3.x = 70;
+						lbl_e3.y = -57;
+						lbl_front.x += 75;
+						pi++;
+						front++;
+						if(pop_op[pi] == "S") {
+							lbl_operation.text = "Pop by assuming STACK";
+						}
+						else if(pop_op[pi] == "Q") {
+							lbl_operation.text = "Pop by assuming QUEUE";
+						}
+						lbl_status.text = "Poped " + lbl_e3.text;
+					}
+					else if(front != 2 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
 
-			var dragger = new createjs.Container();
-			dragger.x = dragger.y = 100;
-			dragger.addChild(element2, lbl_e2);
-			stage.addChild(dragger);
-
-			/*dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
 				stage.update();
-			});*/
+			});
 
-			stage.update();
+			square4.on("click", function(evt){
+				// Push Operation
+				if(rear < size && front != 3) {
+					if(rear == 2 && life > 0) {
+						lbl_e4.x = square4.x - 70;
+						lbl_e4.y = square4.y - 70;
+						lbl_rear.x += 75;
+						rear++;
+						lbl_operation.text = "Push " + data[4];
+						lbl_e5.text = data[4];
+						lbl_status.text = "Pushed " + data[3];
+					}
+					else if(rear != 2 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+				// pop operation
+				else {
+					if(front == 3 && life > 0) {
+						lbl_e4.x = 90;
+						lbl_e4.y = -57;
+						lbl_front.x += 75;
+						pi++;
+						front++;
+						if(pop_op[pi] == "S") {
+							lbl_operation.text = "Pop by assuming STACK";
+						}
+						else if(pop_op[pi] == "Q") {
+							lbl_operation.text = "Pop by assuming QUEUE";
+						}
+						lbl_status.text = "Poped " + lbl_e4.text;
+					}
+					else if(front != 3 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
 
-
-			var dragger = new createjs.Container();
-			dragger.x = dragger.y = 100;
-			dragger.addChild(element3, lbl_e3);
-			stage.addChild(dragger);
-
-			/*dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
 				stage.update();
-			});*/
+			});
 
-			stage.update();
+			square5.on("click", function(evt){
+				// Push operation
+				if(rear < size) {
+					if(rear == 3 && life > 0) {
+						lbl_e5.x = square5.x - 70;
+						lbl_e5.y = square5.y - 70;
+						lbl_rear.x += 75;
+						rear++;
+						lbl_status.text = "Queue is full.";
+						if(pop_op[0] == "S") {
+							lbl_operation.text = "Pop by assuming STACK";
+						}
+						else if(pop_op[0] == "Q") {
+							lbl_operation.text = "Pop by assuming QUEUE";
+						}
+					}
+					else if(rear != 3 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
+				// pop operation
+				else {
+					if(front == 4 && life > 0) {
+						lbl_e5.x = 110;
+						lbl_e5.y = -57;
+						lbl_front.x = -40;
+						lbl_rear.x = -40;
+						front = rear = -1;
+						pi = 0;
+						lbl_operation.text = "Push " + data[0];
+						lbl_status.text = "Queue is empty.";
+					}
+					else if(front != 4 && life > 0) {
+						life--;
+						if(life == 0) {
+							lbl_status.text = "Game Over.";
+						}
+						else {
+							lbl_status.text = "Incorrect Position.";
+						}
+						lbl_life.text = "" + life;
+					}
+				}
 
-
-			var dragger = new createjs.Container();
-			dragger.x = dragger.y = 100;
-			dragger.addChild(element4, lbl_e4);
-			stage.addChild(dragger);
-
-			/*dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
 				stage.update();
-			});*/
+			});
 
 			stage.update();
-
-
-			var dragger = new createjs.Container();
-			dragger.x = dragger.y = 100;
-			dragger.addChild(element5, lbl_e5);
-			stage.addChild(dragger);
-
-			/*dragger.on("pressmove",function(evt) {
-				evt.currentTarget.x = evt.stageX;
-				evt.currentTarget.y = evt.stageY;
-				stage.update();
-			});*/
-
-			stage.update();
-
-			// next button
-			var background = new createjs.Shape();
-			background.name = "background";
-			background.graphics.beginFill("black").drawRoundRect(10, 200, 70, 50, 5);
-
-			var label = new createjs.Text("Next", "bold 16px Arial", "#FFFFFF");
-			label.name = "label";
-			label.textAlign = "center";
-			label.textBaseline = "middle";
-			label.x = 45;
-			label.y = 225;
-
-			var button = new createjs.Container();
-			button.name = "button";
-			button.x = 20;
-			button.y = 20;
-			button.addChild(background, label);
-
-			stage.addChild(button);
-
-
-
-			stage.update();
-
 		}
 
-		function handleClickEvent(evt){
-			console.log("()" + evt.stageX + " , " + evt.stageY + ")");
-			stage.update();
-		}
 	</script>
 </head>
 <body onload="init();">
