--- a/master/WebInterface/index.html
+++ b/master/WebInterface/index.html
@@ -3,7 +3,9 @@
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="https://unpkg.com/angular-ui-router@0.3.1/release/angular-ui-router.js"></script>
-    
+<!-- <script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script> -->
+<!-- Include Bootstrap CSS CDN link -->
+<!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"> -->
 <script src="js/app.js"></script>
 <script src="login/login.controller.js"></script>
 <script src="registration/register.controller.js"></script>
