--- a/master/WebInterface/login/login.html
+++ b/master/WebInterface/login/login.html
@@ -12,6 +12,12 @@
 <html lang="en" ng-app="myApp">
 <head>
 
+<script src="js/angular.min.js"></script>
+<!-- Include UI Bootstrap library -->
+<script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
+<!-- Include Bootstrap CSS CDN link -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Course Game</title>
@@ -24,7 +30,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link rel="stylesheet" href="./css/bootstrap.css" media="screen">
 
-<body ng-app="myApp">
+<body>
 <form id="loginForm" method="post">
 	<div class="page-header" id="banner"
 			style="border-bottom: 0px solid #eee;">
@@ -115,20 +121,5 @@
         </div>
     </form>
 </div> -->
-
-
-
-
-
-<div ng-controller="PopupDemoCont">
-<button ng-click="open()" class="btn btn-warning">Simple Popup</button>
-</div>
-
-<script src="js/angular.min.js"></script>
-<!-- Include UI Bootstrap library -->
-<script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
-<!-- Include Bootstrap CSS CDN link -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-
 </body>
 </html>
