--- a/master/WebInterface/registration/registration.html
+++ b/master/WebInterface/registration/registration.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <title>Course Game</title>
@@ -9,7 +10,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<body ng-app="myApp">
+<body>
 <br><br>
 <<div class="container">
   <div class="row centered-form">
@@ -86,10 +87,6 @@
   </div>
     </div>
       </div>
-
-<div ng-controller="PopupDemoCont">
-<button ng-click="open()" class="btn btn-warning">Simple Popup</button>
-</div>
 
 </body>
 </html>
