--- a/master/WebInterface/Dashboard/dashboard.html
+++ b/master/WebInterface/Dashboard/dashboard.html
@@ -286,7 +286,7 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i> Course<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Add Course</a>
+                                    <a href="/course">Add Course</a>
                                 </li>
                                 <li>
                                     <a href="#">Update Course</a>
@@ -358,6 +358,8 @@
                         <button ng-click="uploadFile()">upload me</button>
     -->
                     </div>
+
+                    
 
                     <div ng-controller = "dashboardctrl">
     <input type="file" file-model="myFile"/>
