--- a/master/WebInterface/index.html
+++ b/master/WebInterface/index.html
@@ -9,6 +9,7 @@
 <script src="registration/register.controller.js"></script>
 <script src="addGame/addGame.controller.js"></script>
 <script src="Dashboard/dashboard.controller.js"></script>
+<script src="course/course.controller.js"></script>
 <body>
 
 <div ng-app="myApp">
