--- a/master/WebInterface/login/login.html
+++ b/master/WebInterface/login/login.html
@@ -1,23 +1,7 @@
- <!--  <div>
-       Enter UserName:- <input type="text" ng-model="user.username"><br>
-     Enter Password:-<input type="password" ng-model="user.password"><br>
-        <button ng-click="submit()">Login</button>
-         
-</div> 
-
-
- -->
+ 
  <!DOCTYPE html>
-<!-- saved from url=(0030)https://bootswatch.com/flatly/ -->
 <html lang="en" ng-app="myApp">
 <head>
-
-<script src="js/angular.min.js"></script>
-<!-- Include UI Bootstrap library -->
-<script src="js/ui-bootstrap-tpls-0.14.3.min.js"></script>
-<!-- Include Bootstrap CSS CDN link -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Course Game</title>
@@ -28,7 +12,7 @@
 
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="stylesheet" href="./css/bootstrap.css" media="screen">
+<!-- <link rel="stylesheet" href="./css/bootstrap.css" media="screen"> -->
 
 <body>
 <form id="loginForm" method="post">
