--- a/master/WebInterface/registration/registration.html
+++ b/master/WebInterface/registration/registration.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <br><br>
-<<div class="container">
+<div class="container">
   <div class="row centered-form">
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
       <div class="panel panel-default">
@@ -42,7 +42,6 @@
             <input type="password" name="password" id="password" class="form-control" placeholder="Password" ng-model="faculty.password" required />
             <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
         </div>
-
         <div class="form-group" ng-class="{ 'has-error': form.contact.$dirty && form.contact.$error.required }">
             <!-- <label for="contact">Contact</label> -->
             <input type="text" name="contact" id="contact" class="form-control" placeholder="Contact" ng-model="faculty.contact" required />
