--- a/master/Game1/Game1.html
+++ b/master/Game1/Game1.html
@@ -5,7 +5,7 @@
 <head>
 	<title>EaselJS demo: Dragging</title>
 	<link href="../_shared/demo.css" rel="stylesheet" type="text/css">
-	<script src="http://code.createjs.com/easeljs-0.8.1.min.js"></script>
+	<script src="easeljs-0.8.1.min.js"></script>
 	<script src="sweetalert/dist/sweetalert.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="sweetalert/dist/sweetalert.css">
 	<script>
