--- a/master/WebInterface/index.html
+++ b/master/WebInterface/index.html
@@ -10,6 +10,9 @@
 <script src="addGame/addGame.controller.js"></script>
 <script src="Dashboard/dashboard.controller.js"></script>
 <script src="course/course.controller.js"></script>
+<script src="unit/unit.controller.js"></script>
+<script src="material/material.controller.js"></script>
+<script src="announcements/announcements.controller.js"></script>
 <body>
 
 <div ng-app="myApp">
