--- a/master/WebInterface/announcements/announcements.html
+++ b/master/WebInterface/announcements/announcements.html
@@ -9,6 +9,18 @@
 <link rel="stylesheet" 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.full.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css">
+    <script type="text/javascript">
+    $(function() {
+    $('.datetimepicker1').datetimepicker({
+      language: 'pt-BR'
+        });
+    });
+    </script>
 </head>
 <body>
 <br><br>
@@ -17,64 +29,79 @@
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
       <div class="panel panel-default">
         <div class="panel-heading" >
-          <h3 class="panel-title">Please Sign Up...</h3>
+          <h3 class="panel-title">Please Fill the details...</h3>
         </div>
         <div class="panel-body">
-    <form name="form" ng-submit="vm.register()" role="form">
+    <form name="form" ng-submit="" role="form">
 
-        <div class="form-group" ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.title.$dirty && form.title.$error.required }">
            <!--  <label for="username">First name</label> -->
-        <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name" ng-model="faculty.firstName" required />
-            <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is required</span>
+        <input type="text" name="title" id="userId" class="form-control" placeholder="Title" ng-model="announcements.title" required />
+            <span ng-show="form.title.$dirty && form.title.$error.required" class="help-block">Title is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.desc.$dirty && form.desc.$error.required }">
             <!-- <label for="username">Last name</label> -->
-        <input type="text" name="lastName" id="Text1" class="form-control" placeholder="Last name" ng-model="faculty.lastName" required />
-            <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
+        <input type="text" name="desc" id="Text1" class="form-control" placeholder="Description" ng-model="announcements.desc" required />
+            <span ng-show="form.desc.$dirty && form.desc.$error.required" class="help-block">Description is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.time.$dirty && form.time.$error.required }">
             <!-- <label for="username">Username</label> -->
-        <input type="text" name="username" id="username" class="form-control" placeholder="Email Address" ng-model="faculty.username" required />
-            <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
+        <input date-format="dd/MM/yyyy hh:mm:ss" type="text" name="time" class="form-control" class="datetimepicker1" class="input-append date"  ng-model="announcements.time" required />
+        <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+            </span>
+            <span ng-show="form.time.$dirty && form.time.$error.required" class="help-block">Time is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.batch.$dirty && form.batch.$error.required }">
             <!-- <label for="password">Password</label> -->
-            <input type="password" name="password" id="password" class="form-control" placeholder="Password" ng-model="faculty.password" required />
-            <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
+            <select name="batch" id="password" class="form-control" ng-model="announcements.batch" required>
+                <option value="" disabled selected>Select batch</option>
+                <option>B.Tech</option>
+                <option>M.Tech</option>
+                <option>M.Sc IT</option>
+                <option>M.Sc ARD</option>
+            </select>
+            <span ng-show="form.batch.$dirty && form.batch.$error.required" class="help-block">Batch is required</span>
         </div>
         <div class="form-group" ng-class="{ 'has-error': form.contact.$dirty && form.contact.$error.required }">
             <!-- <label for="contact">Contact</label> -->
-            <input type="text" name="contact" id="contact" class="form-control" placeholder="Contact" ng-model="faculty.contact" required />
-            <span ng-show="form.contact.$dirty && form.contact.$error.required" class="help-block">Contact is required</span>
+            <select name="open" id="contact" class="form-control" ng-model="announcements.open" required>
+                <option value="" disabled selected>Select an option</option>
+                <option>DA Students</option>
+                <option>All</option>
+            </select>
+            <span ng-show="form.open.$dirty && form.open.$error.required" class="help-block">Field cannot be left blank</span>
         </div>
 
-         <div class="form-group" ng-class="{ 'has-error': form.specialization.$dirty && form.specialization.$error.required }">
-            <!-- <label for="specialization">Specialization</label> -->
-            <input type="text" name="specialization" id="specialization" class="form-control" placeholder="Specialization" ng-model="faculty.specialization" required />
-            <span ng-show="form.specialization.$dirty && form.specialization.$error.required" class="help-block">specialization is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.year.$dirty && form.year.$error.required }">
+            <!-- <label for="password">Password</label> -->
+            <select name="year" id="password" class="form-control" ng-model="announcements.year" required>
+                <option value="" disabled selected>Select year</option>
+                <option>2012</option>
+                <option>2013</option>
+                <option>2014</option>
+                <option>2015</option>
+                <option>2016</option>
+            </select>
+            <span ng-show="form.year.$dirty && form.year.$error.required" class="help-block">Year is required</span>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-error': form.university.$dirty && form.university.$error.required }">
-            <!-- <label for="university">University</label> -->
-            <input type="text" name="university" id="university" class="form-control" placeholder="University" ng-model="faculty.university" required />
-            <span ng-show="form.university.$dirty && form.university.$error.required" class="help-block">University is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.userId.$dirty && form.userId.$error.required }">
+           <!--  <label for="username">First name</label> -->
+        <input type="hidden" name="userId" id="userId" class="form-control" placeholder="First name" ng-model="announcements.userId" required />
+            <span ng-show="form.userId.$dirty && form.userId.$error.required" class="help-block">User id is required</span>
         </div>
 
-         <div class="form-group" ng-class="{ 'has-error': form.city.$dirty && form.city.$error.required }">
-            <!-- <label for="city">City</label> -->
-            <input type="text" name="city" id="city" class="form-control" placeholder="City" ng-model="faculty.city" required />
-            <span ng-show="form.city.$dirty && form.city.$error.required" class="help-block">City is required</span>
-        </div>
-
-         <div class="form-group" ng-class="{ 'has-error': form.country.$dirty && form.country.$error.required }">
-            <!-- <label for="country">Country</label> -->
-            <input type="text" name="country" id="country" class="form-control" placeholder="Country" ng-model="faculty.country" required />
-            <span ng-show="form.country.$dirty && form.country.$error.required" class="help-block">Country is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.courseId.$dirty && form.courseId.$error.required }">
+           <!--  <label for="username">First name</label> -->
+        <input type="hidden" name="courseId" id="courseId" class="form-control" placeholder="First name" ng-model="announcements.courseId" required />
+            <span ng-show="form.courseId.$dirty && form.courseId.$error.required" class="help-block">Course Id is required</span>
         </div>
 
 
         <div class="form-actions">
-            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Register</button>
+            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Submit</button>
            
             <a href="#/login" class="btn btn-link">Cancel</a>
         </div>
