--- a/master/WebInterface/material/material.html
+++ b/master/WebInterface/material/material.html
@@ -9,6 +9,17 @@
 <link rel="stylesheet" 	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.full.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css">
+    <script type="text/javascript">
+    $(function() {
+    $('.datetimepicker1').datetimepicker({
+      language: 'pt-BR'
+        });
+    });
+    </script>
 </head>
 <body>
 <br><br>
@@ -17,64 +28,61 @@
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
       <div class="panel panel-default">
         <div class="panel-heading" >
-          <h3 class="panel-title">Please Sign Up...</h3>
+          <h3 class="panel-title">Please Fill the Details...</h3>
         </div>
         <div class="panel-body">
-    <form name="form" ng-submit="vm.register()" role="form">
+    <form name="form" ng-submit="" role="form">
 
-        <div class="form-group" ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required }">
            <!--  <label for="username">First name</label> -->
-        <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name" ng-model="faculty.firstName" required />
-            <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is required</span>
+        <input type="text" name="name" id="firstName" class="form-control" placeholder="Name" ng-model="material.name" required />
+            <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Name is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
+        <div class="form-group" ng-class="{ 'has-error': form.fileType.$dirty && form.fileType.$error.required }">
             <!-- <label for="username">Last name</label> -->
-        <input type="text" name="lastName" id="Text1" class="form-control" placeholder="Last name" ng-model="faculty.lastName" required />
-            <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
+            <select name="fileType" id="Text1" class="form-control" ng-model="material.fileType" required>
+                <option value="" disabled selected>Select File type</option>
+                <option>pdf</option>
+                <option>doc</option>
+                <option>xlsx</option>
+                <option>pub</option>
+                <option>pptx</option>
+            </select>
+            <span ng-show="form.fileType.$dirty && form.fileType.$error.required" class="help-block">File Type is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
-            <!-- <label for="username">Username</label> -->
-        <input type="text" name="username" id="username" class="form-control" placeholder="Email Address" ng-model="faculty.username" required />
-            <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
+        
+        <div class="form-group" ng-class="{ 'has-error': form.startTime.$dirty && form.startTime.$error.required }">
+            <!-- <label for="startTime">startTime</label> -->
+            <input date-format="dd/MM/yyyy hh:mm:ss" type="text" name="startTime" class="form-control" class="datetimepicker1" class="input-append date" class="form-control" ng-model="material.endTime" required></input>
+            <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+            </span>
+            <span ng-show="form.startTime.$dirty && form.startTime.$error.required" class="help-block">Start Time is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
-            <!-- <label for="password">Password</label> -->
-            <input type="password" name="password" id="password" class="form-control" placeholder="Password" ng-model="faculty.password" required />
-            <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
-        </div>
-        <div class="form-group" ng-class="{ 'has-error': form.contact.$dirty && form.contact.$error.required }">
-            <!-- <label for="contact">Contact</label> -->
-            <input type="text" name="contact" id="contact" class="form-control" placeholder="Contact" ng-model="faculty.contact" required />
-            <span ng-show="form.contact.$dirty && form.contact.$error.required" class="help-block">Contact is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.endTime.$dirty && form.endTime.$error.required }">
+            <!-- <label for="endTime">endTime</label> -->
+            <input date-format="dd/MM/yyyy hh:mm:ss" type="text" name="endTime" class="form-control" class="datetimepicker1" class="input-append date" ng-model="material.endTime" required></input>
+            <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+            </span>
+            <span ng-show="form.endTime.$dirty && form.endTime.$error.required" class="help-block">End Time is required</span>
         </div>
 
-         <div class="form-group" ng-class="{ 'has-error': form.specialization.$dirty && form.specialization.$error.required }">
+         <div class="form-group">
             <!-- <label for="specialization">Specialization</label> -->
-            <input type="text" name="specialization" id="specialization" class="form-control" placeholder="Specialization" ng-model="faculty.specialization" required />
-            <span ng-show="form.specialization.$dirty && form.specialization.$error.required" class="help-block">specialization is required</span>
+            <textarea name="desc" class="form-control" placeholder="Description" ng-model="material.desc"></textarea>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-error': form.university.$dirty && form.university.$error.required }">
-            <!-- <label for="university">University</label> -->
-            <input type="text" name="university" id="university" class="form-control" placeholder="University" ng-model="faculty.university" required />
-            <span ng-show="form.university.$dirty && form.university.$error.required" class="help-block">University is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.topicId.$dirty && form.topicId.$error.required }">
+            <!-- <label for="topicId">topicId</label> -->
+            <input type="text" name="topicId" id="topicId" class="form-control" placeholder="Topic Id" ng-model="material.topicId" required />
+            <span ng-show="form.topicId.$dirty && form.topicId.$error.required" class="help-block">Topic Id is required</span>
         </div>
-
-         <div class="form-group" ng-class="{ 'has-error': form.city.$dirty && form.city.$error.required }">
-            <!-- <label for="city">City</label> -->
-            <input type="text" name="city" id="city" class="form-control" placeholder="City" ng-model="faculty.city" required />
-            <span ng-show="form.city.$dirty && form.city.$error.required" class="help-block">City is required</span>
-        </div>
-
-         <div class="form-group" ng-class="{ 'has-error': form.country.$dirty && form.country.$error.required }">
-            <!-- <label for="country">Country</label> -->
-            <input type="text" name="country" id="country" class="form-control" placeholder="Country" ng-model="faculty.country" required />
-            <span ng-show="form.country.$dirty && form.country.$error.required" class="help-block">Country is required</span>
-        </div>
-
 
         <div class="form-actions">
-            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Register</button>
+            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Submit</button>
            
             <a href="#/login" class="btn btn-link">Cancel</a>
         </div>
