--- a/master/WebInterface/unit/unit.html
+++ b/master/WebInterface/unit/unit.html
@@ -17,64 +17,49 @@
     <div class="col-xs-12 col-sm-8 col-md-4 col-sm-offset-2 col-md-offset-4">
       <div class="panel panel-default">
         <div class="panel-heading" >
-          <h3 class="panel-title">Please Sign Up...</h3>
+          <h3 class="panel-title">Please Fill the Details...</h3>
         </div>
         <div class="panel-body">
-    <form name="form" ng-submit="vm.register()" role="form">
+    <form name="form" ng-submit="" role="form">
 
-        <div class="form-group" ng-class="{ 'has-error': form.firstName.$dirty && form.firstName.$error.required }">
-           <!--  <label for="username">First name</label> -->
-        <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name" ng-model="faculty.firstName" required />
-            <span ng-show="form.firstName.$dirty && form.firstName.$error.required" class="help-block">First name is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.name.$dirty && form.name.$error.required }">
+           <!--  <label for="endTime">First name</label> -->
+        <input type="text" name="name" id="name" class="form-control" placeholder="Unit name" ng-model="topics.name" required />
+            <span ng-show="form.name.$dirty && form.name.$error.required" class="help-block">Unit name is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.lastName.$dirty && form.lastName.$error.required }">
-            <!-- <label for="username">Last name</label> -->
-        <input type="text" name="lastName" id="Text1" class="form-control" placeholder="Last name" ng-model="faculty.lastName" required />
-            <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.startTime.$dirty && form.startTime.$error.required }">
+            <!-- <label for="endTime">Last name</label> -->
+            <input date-format="dd/MM/yyyy hh:mm:ss" type="text" name="startTime" class="form-control" class="datetimepicker1" class="input-append date" placeholder="Start Time" ng-model="topics.startTime" required></input>
+            <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+            </span>
+            <span ng-show="form.startTime.$dirty && form.startTime.$error.required" class="help-block">Start Time is required</span>
         </div>
-        <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
-            <!-- <label for="username">Username</label> -->
-        <input type="text" name="username" id="username" class="form-control" placeholder="Email Address" ng-model="faculty.username" required />
-            <span ng-show="form.username.$dirty && form.username.$error.required" class="help-block">Username is required</span>
-        </div>
-        <div class="form-group" ng-class="{ 'has-error': form.password.$dirty && form.password.$error.required }">
-            <!-- <label for="password">Password</label> -->
-            <input type="password" name="password" id="password" class="form-control" placeholder="Password" ng-model="faculty.password" required />
-            <span ng-show="form.password.$dirty && form.password.$error.required" class="help-block">Password is required</span>
-        </div>
-        <div class="form-group" ng-class="{ 'has-error': form.contact.$dirty && form.contact.$error.required }">
-            <!-- <label for="contact">Contact</label> -->
-            <input type="text" name="contact" id="contact" class="form-control" placeholder="Contact" ng-model="faculty.contact" required />
-            <span ng-show="form.contact.$dirty && form.contact.$error.required" class="help-block">Contact is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.endTime.$dirty && form.endTime.$error.required }">
+            <!-- <label for="endTime">endTime</label> -->
+            <input date-format="dd/MM/yyyy hh:mm:ss" type="text" name="endTime" class="form-control" class="datetimepicker1" class="input-append date" placeholder="End Time" ng-model="topics.endTime" required></input>
+            <span class="add-on">
+                <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+                </i>
+            </span>
+            <span ng-show="form.endTime.$dirty && form.endTime.$error.required" class="help-block">End Time is required</span>
         </div>
 
-         <div class="form-group" ng-class="{ 'has-error': form.specialization.$dirty && form.specialization.$error.required }">
-            <!-- <label for="specialization">Specialization</label> -->
-            <input type="text" name="specialization" id="specialization" class="form-control" placeholder="Specialization" ng-model="faculty.specialization" required />
-            <span ng-show="form.specialization.$dirty && form.specialization.$error.required" class="help-block">specialization is required</span>
+        <div class="form-group">
+            <!-- <label for="desc">desc</label> -->
+            <textarea name="desc" id="desc" class="form-control" placeholder="Description" ng-model="topics.desc" required></textarea>
         </div>
 
-        <div class="form-group" ng-class="{ 'has-error': form.university.$dirty && form.university.$error.required }">
-            <!-- <label for="university">University</label> -->
-            <input type="text" name="university" id="university" class="form-control" placeholder="University" ng-model="faculty.university" required />
-            <span ng-show="form.university.$dirty && form.university.$error.required" class="help-block">University is required</span>
-        </div>
-
-         <div class="form-group" ng-class="{ 'has-error': form.city.$dirty && form.city.$error.required }">
-            <!-- <label for="city">City</label> -->
-            <input type="text" name="city" id="city" class="form-control" placeholder="City" ng-model="faculty.city" required />
-            <span ng-show="form.city.$dirty && form.city.$error.required" class="help-block">City is required</span>
-        </div>
-
-         <div class="form-group" ng-class="{ 'has-error': form.country.$dirty && form.country.$error.required }">
-            <!-- <label for="country">Country</label> -->
-            <input type="text" name="country" id="country" class="form-control" placeholder="Country" ng-model="faculty.country" required />
-            <span ng-show="form.country.$dirty && form.country.$error.required" class="help-block">Country is required</span>
+        <div class="form-group" ng-class="{ 'has-error': form.courseId.$dirty && form.courseId.$error.required }">
+            <!-- <label for="courseId">courseId</label> -->
+            <input type="text" name="courseId" id="courseId" class="form-control" placeholder="Course Id" ng-model="topics.courseId" required />
+            <span ng-show="form.courseId.$dirty && form.courseId.$error.required" class="help-block">Course Id is required</span>
         </div>
 
 
         <div class="form-actions">
-            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Register</button>
+            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary" ng-click="submit()">Add</button>
            
             <a href="#/login" class="btn btn-link">Cancel</a>
         </div>
