--- a/master/WebInterface/Dashboard/dashboard.html
+++ b/master/WebInterface/Dashboard/dashboard.html
@@ -340,8 +340,12 @@
                 <center>
                 <div class = "panel-body" style="display: inline-flex; text-align: center;">
                     <div style="margin: 30px;">
-                        <button  type="file" class="glyphicon glyphicon-plus" ></button>
-                        <p> Add Game</p>
+                        <button type="file" class="glyphicon glyphicon-plus" ></button>
+                        <p><a href="/addGame">Add Game</a></p>
+                    </div>
+                    <div style="margin: 30px;">
+                        <button type="file" class="glyphicon glyphicon-plus" ></button>
+                        <p><a href="/addGame">Update Game</a></p>
                     </div>
                     <div style="margin: 30px;">
                         <button class="glyphicon glyphicon-remove"></button>
