--- a/master/WebInterface/index.html
+++ b/master/WebInterface/index.html
@@ -5,6 +5,8 @@
 <script src="https://unpkg.com/angular-ui-router@0.3.1/release/angular-ui-router.js"></script>
 <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
 <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
+<script type='text/javascript' src='/js/ngStorage.min.js'></script>
+
 
 <script src="js/app.js"></script>
 <script src="login/login.controller.js"></script>
