--- a/master/WebInterface/registration/registration.html
+++ b/master/WebInterface/registration/registration.html
@@ -32,6 +32,9 @@
         <input type="text" name="lastName" id="Text1" class="form-control" placeholder="Last name" ng-model="faculty.lastName" required />
             <span ng-show="form.lastName.$dirty && form.lastName.$error.required" class="help-block">Last name is required</span>
         </div>
+
+        <input type="hidden" name="usertype" ng-model="faculty.userType" value="{{userType}}" ng-init="faculty.userType= '1'">
+
         <div class="form-group" ng-class="{ 'has-error': form.username.$dirty && form.username.$error.required }">
             <!-- <label for="username">Username</label> -->
         <input type="text" name="username" id="username" class="form-control" placeholder="Email Address" ng-model="faculty.username" required />
