--- a/master/WebInterface/course/viewCourse.html
+++ b/master/WebInterface/course/viewCourse.html
@@ -326,7 +326,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1 class="page-header">List of courses</h1>
+                        <h1 class="page-header">{{course.name}}</h1>
                     </div>
                 </div>
             </div>
