Commiting add course

--- a/master/WebApplicationUI/course/components-forms.html
+++ b/master/WebApplicationUI/course/components-forms.html
@@ -10,7 +10,7 @@
         <!-- <link rel="shortcut icon" href="assets/ico/favicon.png"> -->
         <title>Course Game</title>
         <!-- Main styles for this application -->
-        <link href="assets/css/style.css" rel="stylesheet">
+        <link href="../assets/css/style.css" rel="stylesheet">
     </head>
     <!-- BODY options, add following classes to body to change options
 		1. 'sidebar-nav'		  - Navigation on the left
@@ -318,14 +318,14 @@
             </div>
         </div>                    
         <!-- Bootstrap and necessary plugins -->
-        <script src="assets/js/libs/jquery.min.js"></script>
-        <script src="assets/js/libs/tether.min.js"></script>
-        <script src="assets/js/libs/bootstrap.min.js"></script>
-        <script src="assets/js/libs/pace.min.js"></script>
+        <script src="../assets/js/libs/jquery.min.js"></script>
+        <script src="../assets/js/libs/tether.min.js"></script>
+        <script src="../assets/js/libs/bootstrap.min.js"></script>
+        <script src="../assets/js/libs/pace.min.js"></script>
         <!-- Plugins and scripts required by all views -->
-        <script src="assets/js/libs/Chart.min.js"></script>
-        <script src="assets/js/views/shared.js"></script>
+        <script src="../assets/js/libs/Chart.min.js"></script>
+        <script src="../assets/js/views/shared.js"></script>
         <!-- GenesisUI main scripts -->
-        <script src="assets/js/app.js"></script>    
+        <script src="../assets/js/app.js"></script>    
     </body>
 </html>
