view course integreted

--- a/master/WebApplicationUI/index.html
+++ b/master/WebApplicationUI/index.html
@@ -33,6 +33,16 @@
 <script src="login/login.controller.js"></script>
         <script src="register/register.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
+        <script src="course/course.controller.js"></script>
+<!--
+        <script src="addGame/addGame.controller.js"></script>
+        <script src="Dashboard/dashboard.controller.js"></script>
+        
+        <script src="file/fileupload.controller.js"></script>
+        <script src="unit/unit.controller.js"></script>
+        <script src="material/material.controller.js"></script>
+        <script src="announcements/announcements.controller.js"></script>
+-->
     </head>
     
     <!-- BODY options, add following classes to body to change options
