commiting ui cheanges

--- a/master/WebApplicationUI/course/viewCourse.html
+++ b/master/WebApplicationUI/course/viewCourse.html
@@ -310,7 +310,7 @@
         </main>
         <footer class="footer ng-scope">
             <span class="pull-right text-muted">
-                <a href="http://bootstrapmaster.com">LeafUI</a> © 2016 creativeLabs. Powered by <a href="http://GenesisUI.com">GenesisUI</a>
+                CopyRight © 2016  Powered by SEN group-2.
             </span>
         </footer>
         <!-- Bootstrap and necessary plugins -->
