--- a/master/WebApplicationUI/index.html
+++ b/master/WebApplicationUI/index.html
@@ -34,6 +34,8 @@
         <script src="register/register.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
         <script src="course/course.controller.js"></script>
+        <script src="addGame/addGame.controller.js"></script>
+        <script src="addGame/updategame.controller.js"></script>
 <!--
         <script src="addGame/addGame.controller.js"></script>
         <script src="Dashboard/dashboard.controller.js"></script>
